# plato-flux-compiler

./: AGENT.md  AGENTS.md  Cargo.toml  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md
examples/: disasm.rs
src/: ast.rs  codegen.rs  integration.rs  lib.rs  optimizer.rs  parser.rs
tests/: integration_tests.rs
